--- a/benchmark_RLAP/EfficientPhys.ipynb
+++ b/benchmark_RLAP/EfficientPhys.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -25,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,47 +39,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Flops per frame:230341239\n",
-      "Model: \"ep_31\"\n",
+      "Flops per frame:230341628\n",
+      "Model: \"ep_4\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "tsm_31 (TSM)                 multiple                  0         \n",
+      "tsm_4 (TSM)                  multiple                  0         \n",
       "_________________________________________________________________\n",
-      "conv2d_186 (Conv2D)          multiple                  896       \n",
+      "conv2d_24 (Conv2D)           multiple                  896       \n",
       "_________________________________________________________________\n",
-      "conv2d_187 (Conv2D)          multiple                  9248      \n",
+      "conv2d_25 (Conv2D)           multiple                  9248      \n",
       "_________________________________________________________________\n",
-      "conv2d_188 (Conv2D)          multiple                  18496     \n",
+      "conv2d_26 (Conv2D)           multiple                  18496     \n",
       "_________________________________________________________________\n",
-      "conv2d_189 (Conv2D)          multiple                  36928     \n",
+      "conv2d_27 (Conv2D)           multiple                  36928     \n",
       "_________________________________________________________________\n",
-      "conv2d_190 (Conv2D)          multiple                  33        \n",
+      "conv2d_28 (Conv2D)           multiple                  33        \n",
       "_________________________________________________________________\n",
-      "attention_mask_31 (Attention multiple                  0         \n",
+      "attention_mask_4 (Attention_ multiple                  0         \n",
       "_________________________________________________________________\n",
-      "conv2d_191 (Conv2D)          multiple                  65        \n",
+      "conv2d_29 (Conv2D)           multiple                  65        \n",
       "_________________________________________________________________\n",
-      "average_pooling2d_31 (Averag multiple                  0         \n",
+      "average_pooling2d_4 (Average multiple                  0         \n",
       "_________________________________________________________________\n",
-      "dropout_62 (Dropout)         multiple                  0         \n",
+      "dropout_8 (Dropout)          multiple                  0         \n",
       "_________________________________________________________________\n",
-      "dropout_63 (Dropout)         multiple                  0         \n",
+      "dropout_9 (Dropout)          multiple                  0         \n",
       "_________________________________________________________________\n",
-      "dense_62 (Dense)             multiple                  2097280   \n",
+      "dense_8 (Dense)              multiple                  2097280   \n",
       "_________________________________________________________________\n",
-      "dense_63 (Dense)             multiple                  129       \n",
+      "dense_9 (Dense)              multiple                  129       \n",
       "_________________________________________________________________\n",
-      "batch_normalization_31 (Batc multiple                  12        \n",
+      "batch_normalization_4 (Batch multiple                  12        \n",
       "_________________________________________________________________\n",
-      "flatten_3 (Flatten)          multiple                  0         \n",
+      "flatten_4 (Flatten)          multiple                  0         \n",
       "=================================================================\n",
       "Total params: 2,163,087\n",
       "Trainable params: 2,163,081\n",
@@ -101,7 +92,7 @@
     "ep = EP(n=32)\n",
     "ep.compile(optimizer='Nadam', loss='mse')\n",
     "ep.build(input_shape=(None, 72, 72, 3))\n",
-    "print(f'Flops per frame:{get_flops(ep, input_sig=[tf.TensorSpec([32, 72, 72, 3])])/32:.0f}')\n",
+    "print(f'Flops per frame:{get_flops(ep, input_sig=[tf.TensorSpec([160, 72, 72, 3])])/160:.0f}')\n",
     "ep.summary()"
    ]
   },
@@ -117,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,24 +117,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 179/179 [11:50<00:00,  3.97s/it]\n"
+      "100%|██████████| 179/179 [05:23<00:00,  1.81s/it]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'Sliding window': {'MAE': 1.097, 'RMSE': 3.963, 'R': 0.92474},\n",
-       " 'Whole video': {'MAE': 0.479, 'RMSE': 0.796, 'R': 0.99644}}"
+       "{'Sliding window': {'MAE': 1.046, 'RMSE': 3.407, 'R': 0.94347},\n",
+       " 'Whole video': {'MAE': 0.533, 'RMSE': 1.237, 'R': 0.99135}}"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,16 +146,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'SDNN': {'MAE': 37.548, 'RMSE': 48.659, 'R': 0.45769}}"
+       "{'SDNN': {'MAE': 32.437, 'RMSE': 42.745, 'R': 0.52057}}"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,24 +166,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 54/54 [01:08<00:00,  1.27s/it]\n"
+      "100%|██████████| 54/54 [01:14<00:00,  1.38s/it]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'Sliding window': {'MAE': 1.164, 'RMSE': 4.489, 'R': 0.89927},\n",
-       " 'Whole video': {'MAE': 0.473, 'RMSE': 0.786, 'R': 0.99639}}"
+       "{'Sliding window': {'MAE': 1.003, 'RMSE': 3.392, 'R': 0.93875},\n",
+       " 'Whole video': {'MAE': 0.442, 'RMSE': 0.775, 'R': 0.9965}}"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,16 +195,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'SDNN': {'MAE': 47.662, 'RMSE': 56.921, 'R': 0.33198}}"
+       "{'SDNN': {'MAE': 43.742, 'RMSE': 53.725, 'R': 0.35571}}"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,24 +215,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 59/59 [00:43<00:00,  1.34it/s]\n"
+      "100%|██████████| 59/59 [00:51<00:00,  1.15it/s]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'Sliding window': {'MAE': 3.155, 'RMSE': 10.898, 'R': 0.89357},\n",
-       " 'Whole video': {'MAE': 1.39, 'RMSE': 5.98, 'R': 0.96767}}"
+       "{'Sliding window': {'MAE': 2.848, 'RMSE': 10.329, 'R': 0.90378},\n",
+       " 'Whole video': {'MAE': 1.335, 'RMSE': 5.967, 'R': 0.96764}}"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -273,10 +264,10 @@
     {
      "data": {
       "text/plain": [
-       "{'SDNN': {'MAE': 31.862, 'RMSE': 49.01, 'R': 0.38763}}"
+       "{'SDNN': {'MAE': 27.982, 'RMSE': 44.007, 'R': 0.4679}}"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,24 +278,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 42/42 [00:29<00:00,  1.40it/s]\n"
+      "100%|██████████| 42/42 [00:42<00:00,  1.01s/it]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'Sliding window': {'MAE': 1.466, 'RMSE': 3.84, 'R': 0.97522},\n",
-       " 'Whole video': {'MAE': 1.077, 'RMSE': 1.465, 'R': 0.99677}}"
+       "{'Sliding window': {'MAE': 1.479, 'RMSE': 3.884, 'R': 0.97467},\n",
+       " 'Whole video': {'MAE': 1.027, 'RMSE': 1.448, 'R': 0.99689}}"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,22 +307,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'SDNN': {'MAE': 9.762, 'RMSE': 15.048, 'R': 0.82734}}"
+       "{'SDNN': {'MAE': 10.06, 'RMSE': 15.37, 'R': 0.827}}"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "get_metrics_HRV('../results/EfficientPhys_CCNU_UBFC.h5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 660/660 [08:56<00:00,  1.23it/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'Sliding window': {'MAE': 1.508, 'RMSE': 5.313, 'R': 0.83583},\n",
+       " 'Whole video': {'MAE': 1.577, 'RMSE': 5.404, 'R': 0.82064}}"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eval_on_dataset(test_set_MMPD, ep, 32, (72, 72), step=1, batch=0, save='../results/EfficientPhys_CCNU_MMPD.h5', sample=cv2.INTER_CUBIC, cumsum=True)\n",
+    "get_metrics('../results/EfficientPhys_CCNU_MMPD.h5', motion='Stationary', skin_color='3', light=['LED-high', 'LED-low', 'Incandescent'])"
    ]
   }
  ],
