--- a/benchmark_RLAP/NoobHeart.ipynb
+++ b/benchmark_RLAP/NoobHeart.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -95,45 +95,45 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "1189/1189 [==============================] - 66s 55ms/step - loss: 0.7734 - val_loss: 0.7431\n",
+      "1189/1189 [==============================] - 44s 36ms/step - loss: 0.7653 - val_loss: 0.7378\n",
       "\n",
-      "Epoch 00001: val_loss improved from inf to 0.74308, saving model to ../weights\\NoobHeart_CCNU.h5\n",
+      "Epoch 00001: val_loss improved from inf to 0.73776, saving model to ../weights\\NoobHeart_CCNU.h5\n",
       "Epoch 2/10\n",
-      "1189/1189 [==============================] - 52s 44ms/step - loss: 0.7382 - val_loss: 0.7364\n",
+      "1189/1189 [==============================] - 6s 5ms/step - loss: 0.7349 - val_loss: 0.7304\n",
       "\n",
-      "Epoch 00002: val_loss improved from 0.74308 to 0.73641, saving model to ../weights\\NoobHeart_CCNU.h5\n",
+      "Epoch 00002: val_loss improved from 0.73776 to 0.73039, saving model to ../weights\\NoobHeart_CCNU.h5\n",
       "Epoch 3/10\n",
-      "1189/1189 [==============================] - 52s 44ms/step - loss: 0.7301 - val_loss: 0.7143\n",
+      "1189/1189 [==============================] - 6s 5ms/step - loss: 0.7268 - val_loss: 0.7081\n",
       "\n",
-      "Epoch 00003: val_loss improved from 0.73641 to 0.71432, saving model to ../weights\\NoobHeart_CCNU.h5\n",
+      "Epoch 00003: val_loss improved from 0.73039 to 0.70806, saving model to ../weights\\NoobHeart_CCNU.h5\n",
       "Epoch 4/10\n",
-      "1189/1189 [==============================] - 52s 44ms/step - loss: 0.7217 - val_loss: 0.7065\n",
+      "1189/1189 [==============================] - 6s 5ms/step - loss: 0.7194 - val_loss: 0.6997\n",
       "\n",
-      "Epoch 00004: val_loss improved from 0.71432 to 0.70648, saving model to ../weights\\NoobHeart_CCNU.h5\n",
+      "Epoch 00004: val_loss improved from 0.70806 to 0.69967, saving model to ../weights\\NoobHeart_CCNU.h5\n",
       "Epoch 5/10\n",
-      "1189/1189 [==============================] - 51s 43ms/step - loss: 0.7202 - val_loss: 0.7041\n",
+      "1189/1189 [==============================] - 6s 5ms/step - loss: 0.7181 - val_loss: 0.6994\n",
       "\n",
-      "Epoch 00005: val_loss improved from 0.70648 to 0.70410, saving model to ../weights\\NoobHeart_CCNU.h5\n",
+      "Epoch 00005: val_loss improved from 0.69967 to 0.69941, saving model to ../weights\\NoobHeart_CCNU.h5\n",
       "Epoch 6/10\n",
-      "1189/1189 [==============================] - 52s 44ms/step - loss: 0.7197 - val_loss: 0.7018\n",
+      "1189/1189 [==============================] - 6s 5ms/step - loss: 0.7176 - val_loss: 0.6980\n",
       "\n",
-      "Epoch 00006: val_loss improved from 0.70410 to 0.70178, saving model to ../weights\\NoobHeart_CCNU.h5\n",
+      "Epoch 00006: val_loss improved from 0.69941 to 0.69799, saving model to ../weights\\NoobHeart_CCNU.h5\n",
       "Epoch 7/10\n",
-      "1189/1189 [==============================] - 51s 43ms/step - loss: 0.7195 - val_loss: 0.7019\n",
+      "1189/1189 [==============================] - 6s 5ms/step - loss: 0.7173 - val_loss: 0.6974\n",
       "\n",
-      "Epoch 00007: val_loss did not improve from 0.70178\n",
+      "Epoch 00007: val_loss improved from 0.69799 to 0.69744, saving model to ../weights\\NoobHeart_CCNU.h5\n",
       "Epoch 8/10\n",
-      "1189/1189 [==============================] - 51s 43ms/step - loss: 0.7192 - val_loss: 0.7018\n",
+      "1189/1189 [==============================] - 6s 5ms/step - loss: 0.7171 - val_loss: 0.6983\n",
       "\n",
-      "Epoch 00008: val_loss did not improve from 0.70178\n",
+      "Epoch 00008: val_loss did not improve from 0.69744\n",
       "Epoch 9/10\n",
-      "1189/1189 [==============================] - 51s 43ms/step - loss: 0.7190 - val_loss: 0.7012\n",
+      "1189/1189 [==============================] - 6s 5ms/step - loss: 0.7169 - val_loss: 0.6963\n",
       "\n",
-      "Epoch 00009: val_loss improved from 0.70178 to 0.70119, saving model to ../weights\\NoobHeart_CCNU.h5\n",
+      "Epoch 00009: val_loss improved from 0.69744 to 0.69632, saving model to ../weights\\NoobHeart_CCNU.h5\n",
       "Epoch 10/10\n",
-      "1189/1189 [==============================] - 51s 43ms/step - loss: 0.7190 - val_loss: 0.7011\n",
+      "1189/1189 [==============================] - 6s 5ms/step - loss: 0.7167 - val_loss: 0.6972\n",
       "\n",
-      "Epoch 00010: val_loss improved from 0.70119 to 0.70108, saving model to ../weights\\NoobHeart_CCNU.h5\n"
+      "Epoch 00010: val_loss did not improve from 0.69632\n"
      ]
     }
    ],
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,31 +153,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 179/179 [00:18<00:00,  9.57it/s]\n"
+      "100%|██████████| 179/179 [00:16<00:00, 10.59it/s]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'Sliding window': {'MAE': 1.785, 'RMSE': 5.845, 'R': 0.83193},\n",
-       " 'Whole video': {'MAE': 0.849, 'RMSE': 2.764, 'R': 0.95744}}"
+       "{'Sliding window': {'MAE': 1.688, 'RMSE': 5.53, 'R': 0.84964},\n",
+       " 'Whole video': {'MAE': 0.838, 'RMSE': 2.76, 'R': 0.9577}}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "eval_on_dataset(test_set_CCNU, model, 32, (8, 8), step=1, batch=32, save='../results/NoobHeart_CCNU_CCNU.h5')\n",
-    "get_metrics('../results/NoobHeart_CCNU_CCNU.h5',)"
+    "get_metrics('../results/NoobHeart_CCNU_CCNU.h5',)\n",
+    "#get_metrics_HRV('../results/NoobHeart_CCNU_CCNU.h5',)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 54/54 [00:03<00:00, 16.43it/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'Sliding window': {'MAE': 1.511, 'RMSE': 4.403, 'R': 0.89753},\n",
+       " 'Whole video': {'MAE': 0.784, 'RMSE': 1.463, 'R': 0.9881}}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eval_on_dataset(test_set_CCNU_rPPG, model, 32, (8, 8), step=1, batch=32, save='../results/NoobHeart_CCNU_CCNU_rPPG.h5')\n",
+    "get_metrics('../results/NoobHeart_CCNU_CCNU_rPPG.h5',)\n",
+    "#get_metrics_HRV('../results/NoobHeart_CCNU_CCNU_rPPG.h5',)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 59/59 [00:02<00:00, 22.77it/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'Sliding window': {'MAE': 1.121, 'RMSE': 6.905, 'R': 0.95399},\n",
+       " 'Whole video': {'MAE': 0.438, 'RMSE': 0.701, 'R': 0.99968}}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eval_on_dataset(test_set_PURE, model, 32, (8, 8), step=1, batch=32, save='../results/NoobHeart_CCNU_PURE.h5')\n",
+    "get_metrics('../results/NoobHeart_CCNU_PURE.h5',)\n",
+    "#get_metrics_HRV('../results/NoobHeart_CCNU_PURE.h5',)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 42/42 [00:01<00:00, 26.05it/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'Sliding window': {'MAE': 1.762, 'RMSE': 4.327, 'R': 0.96993},\n",
+       " 'Whole video': {'MAE': 1.155, 'RMSE': 1.695, 'R': 0.99633}}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eval_on_dataset(test_set_UBFC_rPPG2, model, 32, (8, 8), step=1, batch=32, save='../results/NoobHeart_CCNU_UBFC.h5')\n",
+    "get_metrics('../results/NoobHeart_CCNU_UBFC.h5',)\n",
+    "#get_metrics_HRV('../results/NoobHeart_CCNU_UBFC.h5',)"
    ]
   },
   {
@@ -189,14 +280,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 54/54 [00:04<00:00, 13.18it/s]\n"
+      "100%|██████████| 660/660 [00:35<00:00, 18.64it/s]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'Sliding window': {'MAE': 1.569, 'RMSE': 4.705, 'R': 0.88329},\n",
-       " 'Whole video': {'MAE': 0.754, 'RMSE': 1.476, 'R': 0.98773}}"
+       "{'Sliding window': {'MAE': 4.962, 'RMSE': 9.607, 'R': 0.52993},\n",
+       " 'Whole video': {'MAE': 2.776, 'RMSE': 6.311, 'R': 0.76314}}"
       ]
      },
      "execution_count": 11,
@@ -205,66 +296,8 @@
     }
    ],
    "source": [
-    "eval_on_dataset(test_set_CCNU_rPPG, model, 32, (8, 8), step=1, batch=32, save='../results/NoobHeart_CCNU_CCNU_rPPG.h5')\n",
-    "get_metrics('../results/NoobHeart_CCNU_CCNU_rPPG.h5',)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 59/59 [00:02<00:00, 21.88it/s]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'Sliding window': {'MAE': 0.765, 'RMSE': 2.447, 'R': 0.99443},\n",
-       " 'Whole video': {'MAE': 0.447, 'RMSE': 0.698, 'R': 0.99962}}"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "eval_on_dataset(test_set_PURE, model, 32, (8, 8), step=1, batch=32, save='../results/NoobHeart_CCNU_PURE.h5')\n",
-    "get_metrics('../results/NoobHeart_CCNU_PURE.h5',)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 42/42 [00:01<00:00, 22.99it/s]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'Sliding window': {'MAE': 1.777, 'RMSE': 4.324, 'R': 0.9701},\n",
-       " 'Whole video': {'MAE': 1.143, 'RMSE': 1.693, 'R': 0.99637}}"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "eval_on_dataset(test_set_UBFC_rPPG2, model, 32, (8, 8), step=1, batch=32, save='../results/NoobHeart_CCNU_UBFC.h5')\n",
-    "get_metrics('../results/NoobHeart_CCNU_UBFC.h5',)"
+    "eval_on_dataset(test_set_MMPD, model, 32, (8, 8), step=0.5, batch=32, save='../results/NoobHeart_CCNU_MMPD.h5')\n",
+    "get_metrics('../results/NoobHeart_CCNU_MMPD.h5', motion='Stationary', skin_color='3', light=['LED-high', 'Incandescent', 'LED-low'])"
    ]
   }
  ],
