--- a/benchmark_RLAP/PhysFormer.ipynb
+++ b/benchmark_RLAP/PhysFormer.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,60 +224,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 54/54 [07:52<00:00,  8.74s/it]\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "{'Sliding window': {'MAE': 0.783, 'RMSE': 2.828, 'R': 0.95652},\n",
-       " 'Whole video': {'MAE': 0.62, 'RMSE': 1.761, 'R': 0.98244}}"
+       "{'SDNN': {'MAE': 28.836, 'RMSE': 34.446, 'R': 0.45018}}"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "eval_on_dataset(test_set_CCNU_rPPG, physformer, 160, (128, 128), step=2, batch=4, save='../results/PhysFormer_CCNU_CCNU_rPPG.h5', sample=cv2.INTER_CUBIC)\n",
-    "get_metrics('../results/PhysFormer_CCNU_CCNU_rPPG.h5')"
+    "#eval_on_dataset(test_set_CCNU_rPPG, physformer, 160, (128, 128), step=2, batch=4, save='../results/PhysFormer_CCNU_CCNU_rPPG.h5', sample=cv2.INTER_CUBIC)\n",
+    "#get_metrics('../results/PhysFormer_CCNU_CCNU_rPPG.h5')\n",
+    "get_metrics_HRV('../results/PhysFormer_CCNU_CCNU_rPPG.h5')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 59/59 [04:55<00:00,  5.01s/it]\n"
+      "x:\\Users\\wkg\\anaconda3\\envs\\dl\\lib\\site-packages\\numpy\\core\\fromnumeric.py:3432: RuntimeWarning: Mean of empty slice.\n",
+      "  return _methods._mean(a, axis=axis, dtype=dtype,\n",
+      "x:\\Users\\wkg\\anaconda3\\envs\\dl\\lib\\site-packages\\numpy\\core\\_methods.py:265: RuntimeWarning: Degrees of freedom <= 0 for slice\n",
+      "  ret = _var(a, axis=axis, dtype=dtype, out=out, ddof=ddof,\n",
+      "x:\\Users\\wkg\\anaconda3\\envs\\dl\\lib\\site-packages\\numpy\\ma\\core.py:5288: RuntimeWarning: Mean of empty slice.\n",
+      "  result = super().mean(axis=axis, dtype=dtype, **kwargs)[()]\n",
+      "x:\\Users\\wkg\\anaconda3\\envs\\dl\\lib\\site-packages\\numpy\\core\\fromnumeric.py:3715: RuntimeWarning: Degrees of freedom <= 0 for slice\n",
+      "  return _methods._var(a, axis=axis, dtype=dtype, out=out, ddof=ddof,\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'Sliding window': {'MAE': 1.483, 'RMSE': 8.584, 'R': 0.92811},\n",
-       " 'Whole video': {'MAE': 1.629, 'RMSE': 9.451, 'R': 0.91439}}"
+       "{'SDNN': {'MAE': 21.613, 'RMSE': 32.029, 'R': 0.57577}}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "eval_on_dataset(test_set_PURE, physformer, 160, (128, 128), step=2, batch=4, save='../results/PhysFormer_CCNU_PURE.h5', sample=cv2.INTER_CUBIC)\n",
-    "get_metrics('../results/PhysFormer_CCNU_PURE.h5')"
+    "#eval_on_dataset(test_set_PURE, physformer, 160, (128, 128), step=2, batch=4, save='../results/PhysFormer_CCNU_PURE.h5', sample=cv2.INTER_CUBIC)\n",
+    "#get_metrics('../results/PhysFormer_CCNU_PURE.h5')\n",
+    "get_metrics_HRV('../results/PhysFormer_CCNU_PURE.h5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "x:\\Users\\wkg\\anaconda3\\envs\\dl\\lib\\site-packages\\scipy\\interpolate\\_fitpack2.py:298: UserWarning: \n",
+      "The maximal number of iterations maxit (set to 20 by the program)\n",
+      "allowed for finding a smoothing spline with fp=s has been reached: s\n",
+      "too small.\n",
+      "There is an approximation returned but the corresponding weighted sum\n",
+      "of squared residuals does not satisfy the condition abs(fp-s)/s < tol.\n",
+      "  warnings.warn(message)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'SDNN': {'MAE': 8.365, 'RMSE': 11.149, 'R': 0.9209}}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#eval_on_dataset(test_set_UBFC_rPPG2, physformer, 160, (128, 128), step=2, batch=4, save='../results/PhysFormer_CCNU_UBFC.h5', sample=cv2.INTER_CUBIC)\n",
+    "#get_metrics('../results/PhysFormer_CCNU_UBFC.h5')\n",
+    "get_metrics_HRV('../results/PhysFormer_CCNU_UBFC.h5')"
    ]
   },
   {
@@ -286,17 +321,10 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 42/42 [03:17<00:00,  4.70s/it]\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "{'Sliding window': {'MAE': 1.624, 'RMSE': 4.114, 'R': 0.97259},\n",
-       " 'Whole video': {'MAE': 1.059, 'RMSE': 1.535, 'R': 0.99701}}"
+       "{'Sliding window': {'MAE': 3.132, 'RMSE': 7.315, 'R': 0.68684},\n",
+       " 'Whole video': {'MAE': 1.696, 'RMSE': 4.135, 'R': 0.89027}}"
       ]
      },
      "execution_count": 9,
@@ -305,8 +333,8 @@
     }
    ],
    "source": [
-    "eval_on_dataset(test_set_UBFC_rPPG2, physformer, 160, (128, 128), step=2, batch=4, save='../results/PhysFormer_CCNU_UBFC.h5', sample=cv2.INTER_CUBIC)\n",
-    "get_metrics('../results/PhysFormer_CCNU_UBFC.h5')"
+    "#eval_on_dataset(test_set_MMPD, physformer, 160, (128, 128), step=4, batch=4, save='../results/PhysFormer_CCNU_MMPD.h5', sample=cv2.INTER_CUBIC)\n",
+    "get_metrics('../results/PhysFormer_CCNU_MMPD.h5', motion='Stationary', skin_color='3', light=['LED-high', 'LED-low', 'Incandescent'])"
    ]
   }
  ],
