--- a/benchmark_RLAP/PhysNet.ipynb
+++ b/benchmark_RLAP/PhysNet.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,47 @@
       "WARNING:tensorflow:From x:\\Users\\wkg\\anaconda3\\envs\\dl\\lib\\site-packages\\tensorflow\\python\\ops\\nn_ops.py:5044: tensor_shape_from_node_def_name (from tensorflow.python.framework.graph_util_impl) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "Use `tf.compat.v1.graph_util.tensor_shape_from_node_def_name`\n",
-      "Flops per frame:54260867\n"
+      "Flops per frame:54260867\n",
+      "Model: \"phys_net\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "sequential (Sequential)      (None, 128, 32, 32, 16)   1280      \n",
+      "_________________________________________________________________\n",
+      "sequential_1 (Sequential)    (None, 128, 16, 16, 32)   13984     \n",
+      "_________________________________________________________________\n",
+      "sequential_2 (Sequential)    (None, 128, 16, 16, 64)   55616     \n",
+      "_________________________________________________________________\n",
+      "sequential_3 (Sequential)    (None, 64, 8, 8, 64)      110912    \n",
+      "_________________________________________________________________\n",
+      "sequential_4 (Sequential)    (None, 64, 8, 8, 64)      110912    \n",
+      "_________________________________________________________________\n",
+      "sequential_5 (Sequential)    (None, 32, 4, 4, 64)      110912    \n",
+      "_________________________________________________________________\n",
+      "sequential_6 (Sequential)    (None, 32, 4, 4, 64)      110912    \n",
+      "_________________________________________________________________\n",
+      "sequential_7 (Sequential)    (None, 32, 2, 2, 64)      110912    \n",
+      "_________________________________________________________________\n",
+      "sequential_8 (Sequential)    (None, 32, 2, 2, 64)      110912    \n",
+      "_________________________________________________________________\n",
+      "sequential_9 (Sequential)    (None, 64, 2, 2, 64)      16704     \n",
+      "_________________________________________________________________\n",
+      "sequential_10 (Sequential)   (None, 128, 2, 2, 64)     16704     \n",
+      "_________________________________________________________________\n",
+      "conv3d_9 (Conv3D)            multiple                  65        \n",
+      "_________________________________________________________________\n",
+      "max_pooling3d (MaxPooling3D) multiple                  0         \n",
+      "_________________________________________________________________\n",
+      "max_pooling3d_1 (MaxPooling3 multiple                  0         \n",
+      "_________________________________________________________________\n",
+      "average_pooling3d (AveragePo multiple                  0         \n",
+      "_________________________________________________________________\n",
+      "reshape (Reshape)            multiple                  0         \n",
+      "=================================================================\n",
+      "Total params: 769,825\n",
+      "Trainable params: 768,577\n",
+      "Non-trainable params: 1,248\n",
+      "_________________________________________________________________\n"
      ]
     }
    ],
@@ -50,7 +90,8 @@
     "phys_net = PhysNet()\n",
     "phys_net.compile(optimizer=keras.optimizers.SGD(learning_rate=0.005), loss=np_loss)\n",
     "phys_net.build(input_shape=(None, 128, 32, 32, 3))\n",
-    "print(f'Flops per frame:{get_flops(phys_net, input_sig=[tf.TensorSpec([1, 128, 32, 32, 3])])/128:.0f}')"
+    "print(f'Flops per frame:{get_flops(phys_net, input_sig=[tf.TensorSpec([1, 128, 32, 32, 3])])/128:.0f}')\n",
+    "phys_net.summary()"
    ]
   },
   {
@@ -65,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,89 +144,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 54/54 [01:57<00:00,  2.17s/it]\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "{'Sliding window': {'MAE': 1.022, 'RMSE': 3.771, 'R': 0.92377},\n",
-       " 'Whole video': {'MAE': 0.64, 'RMSE': 1.828, 'R': 0.98121}}"
+       "{'SDNN': {'MAE': 36.441, 'RMSE': 43.784, 'R': 0.30584}}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "eval_on_dataset(test_set_CCNU_rPPG, phys_net, 128, (32, 32), step=1, batch=32, save='../results/PhysNet_CCNU_CCNU_rPPG.h5', sample=cv2.INTER_CUBIC)\n",
-    "get_metrics('../results/PhysNet_CCNU_CCNU_rPPG.h5')"
+    "#eval_on_dataset(test_set_CCNU_rPPG, phys_net, 128, (32, 32), step=1, batch=32, save='../results/PhysNet_CCNU_CCNU_rPPG.h5', sample=cv2.INTER_CUBIC)\n",
+    "#get_metrics('../results/PhysNet_CCNU_CCNU_rPPG.h5')\n",
+    "get_metrics_HRV('../results/PhysNet_CCNU_CCNU_rPPG.h5')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 59/59 [00:17<00:00,  3.37it/s]\n"
+      "x:\\Users\\wkg\\anaconda3\\envs\\dl\\lib\\site-packages\\numpy\\core\\fromnumeric.py:3432: RuntimeWarning: Mean of empty slice.\n",
+      "  return _methods._mean(a, axis=axis, dtype=dtype,\n",
+      "x:\\Users\\wkg\\anaconda3\\envs\\dl\\lib\\site-packages\\numpy\\core\\_methods.py:265: RuntimeWarning: Degrees of freedom <= 0 for slice\n",
+      "  ret = _var(a, axis=axis, dtype=dtype, out=out, ddof=ddof,\n",
+      "x:\\Users\\wkg\\anaconda3\\envs\\dl\\lib\\site-packages\\numpy\\ma\\core.py:5288: RuntimeWarning: Mean of empty slice.\n",
+      "  result = super().mean(axis=axis, dtype=dtype, **kwargs)[()]\n",
+      "x:\\Users\\wkg\\anaconda3\\envs\\dl\\lib\\site-packages\\numpy\\core\\fromnumeric.py:3715: RuntimeWarning: Degrees of freedom <= 0 for slice\n",
+      "  return _methods._var(a, axis=axis, dtype=dtype, out=out, ddof=ddof,\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'Sliding window': {'MAE': 0.761, 'RMSE': 4.259, 'R': 0.98285},\n",
-       " 'Whole video': {'MAE': 0.475, 'RMSE': 0.754, 'R': 0.9997}}"
+       "{'SDNN': {'MAE': 22.51, 'RMSE': 35.702, 'R': 0.56025}}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "eval_on_dataset(test_set_PURE, phys_net, 128, (32, 32), step=1, batch=32, save='../results/PhysNet_CCNU_PURE.h5', sample=cv2.INTER_CUBIC)\n",
-    "get_metrics('../results/PhysNet_CCNU_PURE.h5')"
+    "#eval_on_dataset(test_set_PURE, phys_net, 128, (32, 32), step=1, batch=32, save='../results/PhysNet_CCNU_PURE.h5', sample=cv2.INTER_CUBIC)\n",
+    "#get_metrics('../results/PhysNet_CCNU_PURE.h5')\n",
+    "get_metrics_HRV('../results/PhysNet_CCNU_PURE.h5')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 42/42 [00:11<00:00,  3.61it/s]\n"
+      "x:\\Users\\wkg\\anaconda3\\envs\\dl\\lib\\site-packages\\scipy\\interpolate\\_fitpack2.py:298: UserWarning: \n",
+      "The maximal number of iterations maxit (set to 20 by the program)\n",
+      "allowed for finding a smoothing spline with fp=s has been reached: s\n",
+      "too small.\n",
+      "There is an approximation returned but the corresponding weighted sum\n",
+      "of squared residuals does not satisfy the condition abs(fp-s)/s < tol.\n",
+      "  warnings.warn(message)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'Sliding window': {'MAE': 1.713, 'RMSE': 4.302, 'R': 0.96936},\n",
-       " 'Whole video': {'MAE': 0.955, 'RMSE': 1.432, 'R': 0.99704}}"
+       "{'SDNN': {'MAE': 12.189, 'RMSE': 14.907, 'R': 0.88684}}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "eval_on_dataset(test_set_UBFC_rPPG2, phys_net, 128, (32, 32), step=1, batch=32, save='../results/PhysNet_CCNU_UBFC.h5', sample=cv2.INTER_CUBIC)\n",
-    "get_metrics('../results/PhysNet_CCNU_UBFC.h5')"
+    "#eval_on_dataset(test_set_UBFC_rPPG2, phys_net, 128, (32, 32), step=1, batch=32, save='../results/PhysNet_CCNU_UBFC.h5', sample=cv2.INTER_CUBIC)\n",
+    "#get_metrics('../results/PhysNet_CCNU_UBFC.h5')\n",
+    "get_metrics_HRV('../results/PhysNet_CCNU_UBFC.h5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Sliding window': {'MAE': 1.657, 'RMSE': 4.498, 'R': 0.8773},\n",
+       " 'Whole video': {'MAE': 0.972, 'RMSE': 1.453, 'R': 0.98796}}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#eval_on_dataset(test_set_MMPD, phys_net, 128, (32, 32), step=1, batch=32, save='../results/PhysNet_CCNU_MMPD.h5', sample=cv2.INTER_CUBIC)\n",
+    "get_metrics('../results/PhysNet_CCNU_MMPD.h5', motion='Stationary', skin_color='3', light=['LED-high', 'LED-low', 'Incandescent'])"
    ]
   }
  ],
