--- a/benchmark_RLAP/ours.ipynb
+++ b/benchmark_RLAP/ours.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -169,37 +178,61 @@
     }
    ],
    "source": [
-    "eval_on_dataset(test_set_CCNU, m1, 450, (8, 8), step=5, batch=32, save='../results/ours_CCNU_CCNU.h5')\n",
+    "#eval_on_dataset(test_set_CCNU, m1, 450, (8, 8), step=5, batch=32, save='../results/ours_CCNU_CCNU.h5')\n",
     "get_metrics('../results/ours_CCNU_CCNU.h5',)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Sliding window': {'MAE': 0.909, 'RMSE': 3.393, 'R': 0.93793},\n",
+       " 'Whole video': {'MAE': 0.654, 'RMSE': 1.951, 'R': 0.97916}}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#eval_on_dataset(test_set_CCNU_rPPG, m1, 450, (8, 8), step=5, batch=32, save='../results/ours_CCNU_CCNU_rPPG.h5')\n",
+    "get_metrics('../results/ours_CCNU_CCNU_rPPG.h5',)\n",
+    "#get_metrics_HRV('../results/ours_CCNU_CCNU_rPPG.h5',)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 54/54 [00:01<00:00, 45.25it/s]\n"
+      "100%|██████████| 59/59 [00:01<00:00, 40.56it/s]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'Sliding window': {'MAE': 0.898, 'RMSE': 3.403, 'R': 0.93768},\n",
-       " 'Whole video': {'MAE': 0.64, 'RMSE': 1.912, 'R': 0.98004}}"
+       "{'Sliding window': {'MAE': 0.359, 'RMSE': 1.136, 'R': 0.99881},\n",
+       " 'Whole video': {'MAE': 0.338, 'RMSE': 0.52, 'R': 0.99978}}"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "eval_on_dataset(test_set_CCNU_rPPG, m1, 450, (8, 8), step=5, batch=32, save='../results/ours_CCNU_CCNU_rPPG.h5')\n",
-    "get_metrics('../results/ours_CCNU_CCNU_rPPG.h5',)"
+    "eval_on_dataset(test_set_PURE, m1, 450, (8, 8), step=5, batch=32, save='../results/ours_CCNU_PURE.h5')\n",
+    "get_metrics('../results/ours_CCNU_PURE.h5',)\n",
+    "#get_metrics_HRV('../results/ours_CCNU_PURE.h5',)"
    ]
   },
   {
@@ -211,36 +244,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 59/59 [00:02<00:00, 23.41it/s]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'Sliding window': {'MAE': 0.359, 'RMSE': 1.136, 'R': 0.99881},\n",
-       " 'Whole video': {'MAE': 0.338, 'RMSE': 0.52, 'R': 0.99978}}"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "eval_on_dataset(test_set_PURE, m1, 450, (8, 8), step=5, batch=32, save='../results/ours_CCNU_PURE.h5')\n",
-    "get_metrics('../results/ours_CCNU_PURE.h5',)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 42/42 [00:01<00:00, 37.50it/s]\n"
+      "100%|██████████| 42/42 [00:00<00:00, 42.53it/s]\n"
      ]
     },
     {
@@ -250,14 +254,37 @@
        " 'Whole video': {'MAE': 0.921, 'RMSE': 1.439, 'R': 0.99679}}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "eval_on_dataset(test_set_UBFC_rPPG2, m1, 450, (8, 8), step=5, batch=32, save='../results/ours_CCNU_UBFC.h5')\n",
-    "get_metrics('../results/ours_CCNU_UBFC.h5',)"
+    "get_metrics('../results/ours_CCNU_UBFC.h5',)\n",
+    "#get_metrics_HRV('../results/ours_CCNU_UBFC.h5',)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Sliding window': {'MAE': 2.698, 'RMSE': 7.397, 'R': 0.68773},\n",
+       " 'Whole video': {'MAE': 1.523, 'RMSE': 3.932, 'R': 0.91476}}"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#eval_on_dataset(test_set_MMPD, m1, 450, (8, 8), step=10, batch=32, save='../results/ours_CCNU_MMPD.h5')\n",
+    "get_metrics('../results/ours_CCNU_MMPD.h5', motion='Stationary', skin_color='3', light=['LED-high', 'LED-low', 'Incandescent',])"
    ]
   }
  ],
