--- a/benchmark_RLAP/DeepPhys.ipynb
+++ b/benchmark_RLAP/DeepPhys.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -25,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,19 +40,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "WARNING:tensorflow:From x:\\Users\\wkg\\anaconda3\\envs\\dl\\lib\\site-packages\\tensorflow\\python\\profiler\\internal\\flops_registry.py:142: tensor_shape_from_node_def_name (from tensorflow.python.framework.graph_util_impl) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use `tf.compat.v1.graph_util.tensor_shape_from_node_def_name`\n",
       "Flops per frame:52158718\n",
-      "Model: \"deep_phys_end_to_end_1\"\n",
+      "Model: \"deep_phys_end_to_end\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "model_1 (Functional)         (None, 1)                 532899    \n",
+      "model (Functional)           (None, 1)                 532899    \n",
       "=================================================================\n",
       "Total params: 532,899\n",
       "Trainable params: 532,899\n",
@@ -90,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +93,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "deepphys(np.random.random((160, 36, 36, 3)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,40 +141,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Sliding window': {'MAE': 1.757, 'RMSE': 4.873, 'R': 0.8768},\n",
-       " 'Whole video': {'MAE': 0.845, 'RMSE': 1.672, 'R': 0.98382}}"
+       "{'SDNN': {'MAE': 57.574, 'RMSE': 64.214, 'R': 0.33789}}"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "eval_on_dataset(test_set_CCNU_rPPG, deepphys, 160, (36, 36), step=1, batch=0, save='../results/DeepPhys_CCNU_CCNU_rPPG.h5', sample=cv2.INTER_CUBIC)\n",
-    "cumsum('../results/DeepPhys_CCNU_CCNU_rPPG.h5')\n",
-    "get_metrics('../results/DeepPhys_CCNU_CCNU_rPPG.h5')"
+    "#eval_on_dataset(test_set_CCNU_rPPG, deepphys, 160, (36, 36), step=1, batch=0, save='../results/DeepPhys_CCNU_CCNU_rPPG.h5', sample=cv2.INTER_CUBIC)\n",
+    "#cumsum('../results/DeepPhys_CCNU_CCNU_rPPG.h5')\n",
+    "#get_metrics('../results/DeepPhys_CCNU_CCNU_rPPG.h5')\n",
+    "get_metrics_HRV('../results/DeepPhys_CCNU_CCNU_rPPG.h5')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 59/59 [00:33<00:00,  1.75it/s]\n",
+      "x:\\Users\\wkg\\anaconda3\\envs\\dl\\lib\\site-packages\\scipy\\interpolate\\_fitpack2.py:298: UserWarning: \n",
+      "The maximal number of iterations maxit (set to 20 by the program)\n",
+      "allowed for finding a smoothing spline with fp=s has been reached: s\n",
+      "too small.\n",
+      "There is an approximation returned but the corresponding weighted sum\n",
+      "of squared residuals does not satisfy the condition abs(fp-s)/s < tol.\n",
+      "  warnings.warn(message)\n",
+      "x:\\Users\\wkg\\anaconda3\\envs\\dl\\lib\\site-packages\\numpy\\core\\fromnumeric.py:3432: RuntimeWarning: Mean of empty slice.\n",
+      "  return _methods._mean(a, axis=axis, dtype=dtype,\n",
+      "x:\\Users\\wkg\\anaconda3\\envs\\dl\\lib\\site-packages\\numpy\\core\\_methods.py:265: RuntimeWarning: Degrees of freedom <= 0 for slice\n",
+      "  ret = _var(a, axis=axis, dtype=dtype, out=out, ddof=ddof,\n",
+      "x:\\Users\\wkg\\anaconda3\\envs\\dl\\lib\\site-packages\\numpy\\ma\\core.py:5288: RuntimeWarning: Mean of empty slice.\n",
+      "  result = super().mean(axis=axis, dtype=dtype, **kwargs)[()]\n",
+      "x:\\Users\\wkg\\anaconda3\\envs\\dl\\lib\\site-packages\\numpy\\core\\fromnumeric.py:3715: RuntimeWarning: Degrees of freedom <= 0 for slice\n",
+      "  return _methods._var(a, axis=axis, dtype=dtype, out=out, ddof=ddof,\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "{'Sliding window': {'MAE': 5.711, 'RMSE': 14.079, 'R': 0.81443},\n",
-       " 'Whole video': {'MAE': 2.799, 'RMSE': 8.312, 'R': 0.93726}}"
+       "{'SDNN': {'MAE': 85.98, 'RMSE': 92.018, 'R': 0.29681}}"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,22 +203,29 @@
    "source": [
     "eval_on_dataset(test_set_PURE, deepphys, 160, (36, 36), step=1, batch=0, save='../results/DeepPhys_CCNU_PURE.h5', sample=cv2.INTER_CUBIC)\n",
     "cumsum('../results/DeepPhys_CCNU_PURE.h5')\n",
-    "get_metrics('../results/DeepPhys_CCNU_PURE.h5')"
+    "#get_metrics('../results/DeepPhys_CCNU_PURE.h5')\n",
+    "get_metrics_HRV('../results/DeepPhys_CCNU_PURE.h5')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 42/42 [00:22<00:00,  1.88it/s]\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "{'Sliding window': {'MAE': 1.792, 'RMSE': 4.212, 'R': 0.97035},\n",
-       " 'Whole video': {'MAE': 1.06, 'RMSE': 1.505, 'R': 0.99666}}"
+       "{'SDNN': {'MAE': 30.012, 'RMSE': 37.764, 'R': 0.64769}}"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +233,37 @@
    "source": [
     "eval_on_dataset(test_set_UBFC_rPPG2, deepphys, 160, (36, 36), step=1, batch=0, save='../results/DeepPhys_CCNU_UBFC.h5', sample=cv2.INTER_CUBIC)\n",
     "cumsum('../results/DeepPhys_CCNU_UBFC.h5')\n",
-    "get_metrics('../results/DeepPhys_CCNU_UBFC.h5')"
+    "#get_metrics('../results/DeepPhys_CCNU_UBFC.h5')\n",
+    "get_metrics_HRV('../results/DeepPhys_CCNU_UBFC.h5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 660/660 [02:42<00:00,  4.05it/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'Sliding window': {'MAE': 2.046, 'RMSE': 6.166, 'R': 0.77657},\n",
+       " 'Whole video': {'MAE': 1.026, 'RMSE': 1.455, 'R': 0.98737}}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eval_on_dataset(test_set_MMPD, deepphys, 160, (36, 36), step=4, batch=0, save='../results/DeepPhys_CCNU_MMPD.h5', sample=cv2.INTER_CUBIC, cumsum=True)\n",
+    "get_metrics('../results/DeepPhys_CCNU_MMPD.h5', motion='Stationary', skin_color='3', light=['LED-high', 'LED-low', 'Incandescent'])"
    ]
   }
  ],
