--- a/benchmark_RLAP/TS-CAN.ipynb
+++ b/benchmark_RLAP/TS-CAN.ipynb
@@ -16,9 +16,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(160, 36, 36, 3)\n"
+     ]
+    }
+   ],
    "source": [
     "train_tape = \"Z:/rppg/ccnu_datatape_160x36x36_train.h5\"\n",
     "valid_tape = \"Z:/rppg/ccnu_datatape_160x36x36_valid.h5\"\n",
@@ -39,17 +47,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From x:\\Users\\wkg\\anaconda3\\envs\\dl\\lib\\site-packages\\tensorflow\\python\\profiler\\internal\\flops_registry.py:142: tensor_shape_from_node_def_name (from tensorflow.python.framework.graph_util_impl) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Use `tf.compat.v1.graph_util.tensor_shape_from_node_def_name`\n",
-      "Flops per frame:52158718\n"
+      "Flops per frame:52158718\n",
+      "Model: \"ts_can_end_to_end_5\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "model_5 (Functional)         (None, 1)                 532899    \n",
+      "=================================================================\n",
+      "Total params: 532,899\n",
+      "Trainable params: 532,899\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
      ]
     }
    ],
@@ -57,7 +72,8 @@
     "ts_can_e2e = TS_CAN_end_to_end(n=20)\n",
     "ts_can_e2e.compile(optimizer='Nadam', loss='mse')\n",
     "ts_can_e2e.build(input_shape=(None, 36, 36, 3))\n",
-    "print(f'Flops per frame:{get_flops(ts_can_e2e, input_sig=[tf.TensorSpec([160, 36, 36, 3])])/160:.0f}')"
+    "print(f'Flops per frame:{get_flops(ts_can_e2e, input_sig=[tf.TensorSpec([160, 36, 36, 3])])/160:.0f}')\n",
+    "ts_can_e2e.summary()"
    ]
   },
   {
@@ -72,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,85 +143,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Sliding window': {'MAE': 1.233, 'RMSE': 3.816, 'R': 0.92194},\n",
-       " 'Whole video': {'MAE': 0.704, 'RMSE': 1.626, 'R': 0.9847}}"
+       "{'SDNN': {'MAE': 50.056, 'RMSE': 59.304, 'R': 0.39467}}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "eval_on_dataset(test_set_CCNU_rPPG, ts_can_e2e, 160, (36, 36), step=1, batch=0, save='../results/TS-CAN_CCNU_CCNU_rPPG.h5', sample=cv2.INTER_CUBIC)\n",
-    "cumsum('../results/TS-CAN_CCNU_CCNU_rPPG.h5')\n",
-    "get_metrics('../results/TS-CAN_CCNU_CCNU_rPPG.h5')"
+    "#eval_on_dataset(test_set_CCNU_rPPG, ts_can_e2e, 160, (36, 36), step=1, batch=0, save='../results/TS-CAN_CCNU_CCNU_rPPG.h5', sample=cv2.INTER_CUBIC)\n",
+    "#cumsum('../results/TS-CAN_CCNU_CCNU_rPPG.h5')\n",
+    "#get_metrics('../results/TS-CAN_CCNU_CCNU_rPPG.h5')\n",
+    "get_metrics_HRV('../results/TS-CAN_CCNU_CCNU_rPPG.h5')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 59/59 [00:40<00:00,  1.47it/s]\n"
+      "x:\\Users\\wkg\\anaconda3\\envs\\dl\\lib\\site-packages\\numpy\\ma\\core.py:5288: RuntimeWarning: Mean of empty slice.\n",
+      "  result = super().mean(axis=axis, dtype=dtype, **kwargs)[()]\n",
+      "x:\\Users\\wkg\\anaconda3\\envs\\dl\\lib\\site-packages\\numpy\\core\\fromnumeric.py:3715: RuntimeWarning: Degrees of freedom <= 0 for slice\n",
+      "  return _methods._var(a, axis=axis, dtype=dtype, out=out, ddof=ddof,\n",
+      "x:\\Users\\wkg\\anaconda3\\envs\\dl\\lib\\site-packages\\numpy\\core\\fromnumeric.py:3432: RuntimeWarning: Mean of empty slice.\n",
+      "  return _methods._mean(a, axis=axis, dtype=dtype,\n",
+      "x:\\Users\\wkg\\anaconda3\\envs\\dl\\lib\\site-packages\\numpy\\core\\_methods.py:265: RuntimeWarning: Degrees of freedom <= 0 for slice\n",
+      "  ret = _var(a, axis=axis, dtype=dtype, out=out, ddof=ddof,\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'Sliding window': {'MAE': 4.15, 'RMSE': 11.892, 'R': 0.87403},\n",
-       " 'Whole video': {'MAE': 2.122, 'RMSE': 6.671, 'R': 0.95973}}"
+       "{'SDNN': {'MAE': 61.401, 'RMSE': 74.103, 'R': 0.29331}}"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "eval_on_dataset(test_set_PURE, ts_can_e2e, 160, (36, 36), step=1, batch=0, save='../results/TS-CAN_CCNU_PURE.h5', sample=cv2.INTER_CUBIC)\n",
-    "cumsum('../results/TS-CAN_CCNU_PURE.h5')\n",
-    "get_metrics('../results/TS-CAN_CCNU_PURE.h5')"
+    "#eval_on_dataset(test_set_PURE, ts_can_e2e, 160, (36, 36), step=1, batch=0, save='../results/TS-CAN_CCNU_PURE.h5', sample=cv2.INTER_CUBIC)\n",
+    "#cumsum('../results/TS-CAN_CCNU_PURE.h5')\n",
+    "#get_metrics('../results/TS-CAN_CCNU_PURE.h5')\n",
+    "get_metrics_HRV('../results/TS-CAN_CCNU_PURE.h5')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 42/42 [00:23<00:00,  1.80it/s]\n"
+      "x:\\Users\\wkg\\anaconda3\\envs\\dl\\lib\\site-packages\\scipy\\interpolate\\_fitpack2.py:298: UserWarning: \n",
+      "The maximal number of iterations maxit (set to 20 by the program)\n",
+      "allowed for finding a smoothing spline with fp=s has been reached: s\n",
+      "too small.\n",
+      "There is an approximation returned but the corresponding weighted sum\n",
+      "of squared residuals does not satisfy the condition abs(fp-s)/s < tol.\n",
+      "  warnings.warn(message)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'Sliding window': {'MAE': 1.824, 'RMSE': 4.131, 'R': 0.97172},\n",
-       " 'Whole video': {'MAE': 1.022, 'RMSE': 1.478, 'R': 0.9968}}"
+       "{'SDNN': {'MAE': 25.607, 'RMSE': 31.848, 'R': 0.5878}}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "eval_on_dataset(test_set_UBFC_rPPG2, ts_can_e2e, 160, (36, 36), step=1, batch=0, save='../results/TS-CAN_CCNU_UBFC.h5', sample=cv2.INTER_CUBIC)\n",
-    "cumsum('../results/TS-CAN_CCNU_UBFC.h5')\n",
-    "get_metrics('../results/TS-CAN_CCNU_UBFC.h5')"
+    "#eval_on_dataset(test_set_UBFC_rPPG2, ts_can_e2e, 160, (36, 36), step=1, batch=0, save='../results/TS-CAN_CCNU_UBFC.h5', sample=cv2.INTER_CUBIC)\n",
+    "#cumsum('../results/TS-CAN_CCNU_UBFC.h5')\n",
+    "#get_metrics('../results/TS-CAN_CCNU_UBFC.h5')\n",
+    "get_metrics_HRV('../results/TS-CAN_CCNU_UBFC.h5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Sliding window': {'MAE': 1.715, 'RMSE': 4.864, 'R': 0.85781},\n",
+       " 'Whole video': {'MAE': 0.95, 'RMSE': 1.396, 'R': 0.98897}}"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#eval_on_dataset(test_set_MMPD, ts_can_e2e, 160, (36, 36), step=1, batch=0, save='../results/TS-CAN_CCNU_MMPD.h5', sample=cv2.INTER_CUBIC, cumsum=True)\n",
+    "get_metrics('../results/TS-CAN_CCNU_MMPD.h5', motion='Stationary', skin_color='3', light=['LED-high', 'LED-low', 'Incandescent'])"
    ]
   }
  ],
